# intercom-triage

./: .gitattributes  .gitignore  .gitleaks.toml  .worktreeinclude  CLAUDE.md  README.md  SECURITY.md  plan.md  spec.md  tasks.md
backend/: .env.example  CLAUDE.md  README.md  REVIEW-2026-05-27.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_mute_alarms.py  0003_add_internal_notes.py  0004_add_user_edited_flags.py  0005_add_use_ai.py  0006_add_ticket_resolution.py  0007_add_hide_empty_categories.py  0008_add_note_entries.py  0009_add_note_attachments.py  0010_non_actionable_verdict.py  0011_add_playbooks_table.py  0012_add_ai_resolved_source.py  0013_add_resolution_cleared_at.py  0014_add_ticket_embeddings.py  0015_add_ticket_triage_facets.py  0016_add_snippets_table.py  0017_add_ticket_clusters.py  0018_add_parked_columns.py  0019_add_parked_note.py  0020_add_non_actionable_kind.py  0021_add_auth_tables.py  0022_add_session_prev_hash.py  0023_add_ticket_attribution.py  0024_add_ticket_assignment.py  0025_add_ticket_assigned_pair_check.py
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  metrics.py  models.py  observability.py  pricing.py  schemas.py  util.py
backend/app/ai/: __init__.py  clustering.py  embeddings.py  fewshot.py  pipeline.py  prompt.py
backend/app/clients/: __init__.py  intercom.py  onlysales.py  openrouter.py
backend/app/routers/: __init__.py  attachments.py  auth.py  categories.py  clusters.py  followups.py  health.py  metrics.py  note_entries.py  notes.py  playbooks.py  proposals.py  settings.py  snippets.py  stats.py  tickets.py
backend/app/security/: __init__.py  ratelimit.py  tokens.py
backend/app/services/: __init__.py  attachments.py  auth.py  bulk.py  cache.py  categories.py  categorization_rule.py  clusters.py  followups.py  intercom_normalizer.py  note_entries.py  notes.py  playbooks.py  proposals.py  resolution.py  settings.py  snippets.py  stats.py  sync.py  (+1 more)
backend/scripts/: backfill_categorization.py
backend/tests/: conftest.py  helpers.py  test_ai.py  test_assignment.py  test_attachment_auth.py  test_attachments_api.py  test_attachments_service.py  test_attribution.py  test_auth_api.py  test_auth_config.py  test_auth_models.py  test_auth_required.py  test_auth_reuse_detection.py  test_auth_schemas.py  test_auth_service.py  test_board_field_coverage.py  test_boot.py  test_bulk_api.py  test_bulk_schemas.py  test_cache.py  test_categories.py  test_categories_api.py  test_categorization_rule.py  test_cluster_gaps.py  test_clustering.py  test_current_user_dep.py  test_embeddings.py  test_fewshot.py  test_followups_api.py  test_health.py  test_ingest_api.py  test_intercom.py  test_intercom_client.py  test_intercom_normalizer.py  test_metrics.py  test_models.py  test_note_entries_api.py  test_note_entries_service.py  test_notes_api.py  test_observability.py  (+26 more)
(+242 files in other folders)
