[project]
name = "intercom-triage-backend"
version = "0.1.0"
description = "Local triage backend for Intercom conversations"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", ".venv"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "ASYNC",    # async best practices
    "S",        # bandit-lite
    "C4",       # comprehensions
    "RUF",      # ruff-specific
]
ignore = [
    "E501",   # line length (handled by formatter when feasible)
    "S101",   # asserts (used in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
# FastAPI's `Depends()` in argument defaults is idiomatic, not a B008 bug.
"app/routers/*" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["data", ".venv", "tests"]

[[tool.mypy.overrides]]
module = ["aiosqlite.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
